[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_gameover"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_gameover")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.05, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_colors/font_color = Color(0.9, 0.2, 0.2, 1)
text = "GAME OVER"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBox/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Final Score: 0"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="CenterContainer/VBox/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Level Reached: 1"
horizontal_alignment = 1

[node name="AccuracyLabel" type="Label" parent="CenterContainer/VBox/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Accuracy: --"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="RestartButton" type="Button" parent="CenterContainer/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="QuitButton" type="Button" parent="CenterContainer/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit to Menu"
